// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtificialIntelligenceController on files selection changed should calculate risk profile and suspicious metrics for all occurring programming languages in selected file 1`] = `
Object {
  "highRisk": 145,
  "lowRisk": 125,
  "moderateRisk": 0,
  "totalRloc": 270,
  "veryHighRisk": 0,
}
`;

exports[`ArtificialIntelligenceController on files selection changed should calculate risk profile and suspicious metrics for all occurring programming languages in selected file 2`] = `
Object {
  "highRisk": 54,
  "lowRisk": 46,
  "moderateRisk": 0,
  "veryHighRisk": 0,
}
`;

exports[`ArtificialIntelligenceController on files selection changed should calculate risk profile but skip files with missing metrics 1`] = `
Object {
  "highRisk": 0,
  "lowRisk": 0,
  "moderateRisk": 0,
  "veryHighRisk": 0,
}
`;

exports[`ArtificialIntelligenceController on files selection changed should calculate risk profile for Java map 1`] = `
Object {
  "highRisk": 37,
  "lowRisk": 46,
  "moderateRisk": 17,
  "veryHighRisk": 0,
}
`;

exports[`ArtificialIntelligenceController on files selection changed should calculate risk profile for not excluded files only 1`] = `
Object {
  "highRisk": 50,
  "lowRisk": 27,
  "moderateRisk": 23,
  "veryHighRisk": 0,
}
`;

exports[`ArtificialIntelligenceController on files selection changed should calculate suspicious metrics sorted by isOutlier 1`] = `
Array [
  Object {
    "from": 365,
    "isOutlier": true,
    "max": 0,
    "metric": "loc",
    "min": 0,
    "to": 554,
  },
  Object {
    "from": 29,
    "isOutlier": true,
    "max": 0,
    "metric": "functions",
    "min": 0,
    "to": 44,
  },
  Object {
    "from": 48,
    "max": 0,
    "metric": "mcc",
    "min": 0,
    "to": 71,
  },
]
`;

exports[`ArtificialIntelligenceController on files selection changed should calculate suspicious metrics sorted by isOutlier 2`] = `
Array [
  "rloc (real lines of code)",
]
`;

exports[`ArtificialIntelligenceController on files selection changed should set default values for risk profile 1`] = `
Object {
  "highRisk": 0,
  "lowRisk": 0,
  "moderateRisk": 0,
  "totalRloc": 0,
  "veryHighRisk": 0,
}
`;

exports[`ArtificialIntelligenceController on files selection changed should set default values for risk profile 2`] = `
Object {
  "highRisk": 0,
  "lowRisk": 0,
  "moderateRisk": 0,
  "veryHighRisk": 0,
}
`;

exports[`ArtificialIntelligenceController should calculate risk profile only for valid file extensions 1`] = `
Object {
  "highRisk": 0,
  "lowRisk": 125,
  "moderateRisk": 45,
  "totalRloc": 170,
  "veryHighRisk": 0,
}
`;

exports[`ArtificialIntelligenceController should calculate risk profile only for valid file extensions 2`] = `
Object {
  "highRisk": 0,
  "lowRisk": 74,
  "moderateRisk": 26,
  "veryHighRisk": 0,
}
`;
